--- a/Project development phase/README
+++ b/Project development phase/README
@@ -1,4 +1,4 @@
-Sprint I - Data Collection, Model building
+Sprint I - Data Collection, Model building, save the model
 Sprint II - Application Building
 Sprint III - Integrate Python flask and other files
 Sprint IV - Deployment in cloud
